[gd_scene load_steps=3 format=3 uid="uid://bpcm3tvmjn5sg"]

[ext_resource type="Script" path="res://password_list.gd" id="1_7d5ae"]
[ext_resource type="PackedScene" uid="uid://xery8lugsak3" path="res://password_confirmation_dialog.tscn" id="2_e8ud3"]

[node name="Password_List" type="VBoxContainer"]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_7d5ae")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LineEdit_search" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
clear_button_enabled = true

[node name="Button_exit" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Exit"

[node name="ItemList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button_copy" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Copy Password"

[node name="Button_edit" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit
"

[node name="Button_remove" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "-"

[node name="Button_add" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "+"

[node name="ConfirmationDialog_remove" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(399, 100)
unresizable = true
ok_button_text = "Yes"
dialog_text = "Are you sure your want to remove this Password?"
cancel_button_text = "No"

[node name="PasswordConfirmationDialog" parent="." instance=ExtResource("2_e8ud3")]
unique_name_in_owner = true
visible = false

[connection signal="text_changed" from="HBoxContainer2/LineEdit_search" to="." method="_on_line_edit_search_text_changed"]
[connection signal="pressed" from="HBoxContainer2/Button_exit" to="." method="_on_button_exit_pressed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="HBoxContainer/Button_copy" to="." method="_on_button_copy_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_edit" to="." method="_on_button_edit_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_remove" to="." method="_on_button_remove_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_add" to="." method="_on_button_add_pressed"]
[connection signal="confirmed" from="ConfirmationDialog_remove" to="." method="remove_selected"]
[connection signal="password_correct" from="PasswordConfirmationDialog" to="." method="_on_password_confirmation_dialog_password_correct"]
[connection signal="password_wrong" from="PasswordConfirmationDialog" to="." method="_on_password_confirmation_dialog_password_wrong"]
